# analyticsplatform

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs
backend/src/core/: auth.rs  connection.rs  connector.rs  dataset.rs  mod.rs  org.rs  postgresconnector.rs  session.rs  team.rs  user.rs
backend/src/data/: config.rs  mod.rs
backend/src/data/dynamodb/: config.rs  conversions.rs
backend/src/routes/: auth.rs  connector.rs  dataset.rs  mod.rs  org.rs  team.rs  user.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  loading.tsx  menu.tsx  page.tsx  profile.tsx
frontend/src/app/auth/: route.ts
frontend/src/app/components/: auth.ts  chat.tsx
frontend/src/app/data/: accordion.tsx  page.tsx
frontend/src/app/lib/: db.ts
frontend/src/app/profile/: route.ts
infrastructure/: README.md  package-lock.json  package.json
infrastructure/lib/: index.ts
ui/: package-lock.json  package.json  tailwind.config.ts
ui/src/: middleware.ts
ui/src/app/: layout.tsx  menu.tsx
ui/src/app/auth/: route.ts
ui/src/app/components/: chart.tsx  feed.tsx  filter-bar.tsx
ui/src/app/health/: route.ts
ui/src/app/lib/: db.ts
ui/src/app/map/: page.tsx
