[package]
name = "analytics-platform-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.74"
aws-sdk-dynamodb = "1.4.0"
aws-config = "1.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
