[package]
name = "analytics-platform-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.74"
aws-sdk-dynamodb = "1.4.0"
aws-config = "1.1"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5.2"
cookie = "0.18.0"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["trace"] }
